# fastapi-microservices

./: .gitignore  config.py  enums.py  logger.py  pyproject.toml
inventory/: consumer.py  database.py  main.py  models.py  schemas.py
inventory/routers/: products.py
orders/: consumer.py  database.py  main.py  models.py  schemas.py
orders/routers/: orders.py
tests/: conftest.py  test_inventory.py  test_orders.py
