[tool.poetry]
name = "fastapi-microservices"
version = "0.1.0"
description = ""
authors = ["Anu1996rag <anuragpatils1996@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_microservices"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.0"
redis-om = "0.0.20"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
gunicorn = "^20.1.0"
loguru = "^0.6.0"
fastapi-restful = "^0.4.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
